--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <p>We may update our Privacy Policy from time to time. Any changes will be posted on this page.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at [your_email@example.com].</p>
+    <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at multitech innovations.</p>
 </body>
 </html>
