--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Privacy Policy</title>
 </head>
 <body>
-    <h1>Privacy Policy for Google Search Popup Extension</h1>
-    <p>This privacy policy explains how the Google Search Popup extension handles your information.</p>
+    <h1>Privacy Policy for MULTITECH INNOVATIONS </h1>
+    <p>This privacy policy explains how the MULTITECH INNOVATIONS  handles your information.</p>
     
     <h2>Information We Collect</h2>
     <p>This extension does not collect, store, or transmit any personal data or information. The extension does not access, collect, or share any information about your browsing activity.</p>
